--- a/left_frame.html
+++ b/left_frame.html
@@ -1,13 +1,13 @@
 <!-- left_frame.html -->
 <html>
 <head>
-  <title>Departments</title>
+  <title>COURSES</title>
 </head>
 <body>
   <br>
-  <a href="it.html" target="right_frame"><h3> <font face="monotype corsiva" color="brown">Getting Started with Programming</font></h3></a><br><br><br><br><br><br>
-  <a href="ece.html" target="right_frame"><h3><font face="monotype corsiva" color="teal">Frontend Development</font></h3></a><br><br><br><br><br><br>
-  <a href="mech.html" target="right_frame"><h3><font face="monotype corsiva" color="green">Backend Development</font></h3></a><br><br><br><br><br><br>
-  <a href="civil.html" target="right_frame"><h3><font face="monotype corsiva" color="red">Devops</font></h3></a>
+  <a href="started.html" target="right_frame"><h3> <font face="monotype corsiva" color="brown">Getting Started with Programming</font></h3></a><br><br><br><br><br><br>
+  <a href="frontend.html" target="right_frame"><h3><font face="monotype corsiva" color="teal">Frontend Development</font></h3></a><br><br><br><br><br><br>
+  <a href="backend.html" target="right_frame"><h3><font face="monotype corsiva" color="green">Backend Development</font></h3></a><br><br><br><br><br><br>
+  <a href="devops.html" target="right_frame"><h3><font face="monotype corsiva" color="red">Devops</font></h3></a>
 </body>
 </html>
