--- a/top_frame.html
+++ b/top_frame.html
@@ -4,7 +4,7 @@
   <title>Top Frame</title>
 </head>
 <body>
-  <img src="E:\Personal\Misbah\Work Space\HORIZON\Learning\Demos\Week 2\Web dev\images\270187.png" alt="Logo" align="left" width="100" height="100">
+  <img src="./images/270187.png" alt="Logo" align="left" width="100" height="100">
   <h1 align="center">E LIBRARY</h1>
   <p>
     <a href="home.html" target="_parent">Home</a>  &nbsp;&nbsp;
