--- a/frontend.html
+++ b/frontend.html
@@ -5,9 +5,9 @@
 <body>
     <h1 style="text-align: center;"><b><i>Your Comprehensive Web Development Journey Begins Here</i></b></h1><br><br><br>
     <div style="text-align: center;">
-        <a href="web_dev.html" target="right_frame" style="color: red;"><h2>Web Development</h2></a><br><br>
+        <a href="./web_dev.html" target="right_frame" style="color: red;"><h2>Web Development</h2></a><br><br>
         
-        <a href="framework.html" target="right_frame" style="color: teal;"><h2>FrameWork</h2></a>
+        <a href="#" target="right_frame" style="color: teal;"><h2>FrameWork</h2></a>
     </div>
 </body>
 </html>
