--- a/right_frame.html
+++ b/right_frame.html
@@ -1,10 +1,16 @@
-<!-- right_frame.html -->
 <html>
 <head>
   <title>Right Frame</title>
+  <style>
+    body {
+      background-image: url('./images/Horizon.jpeg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  </style>
 </head>
-<body bgcolor="aqua">
-  <h2 align="center"><font face="times new roman" color="green">E LIBRARY</font></h2>
-  <h3><font face="monotype corsiva" color="red">This E LIBRARY IS DEVELOPED BY MISBAH</font></h3>
+<body>
+  
 </body>
 </html>
