--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
   <title>E LIBRARY</title>
 </head>
 <frameset rows="20%,*">
-  <frame src="top_frame.html" name="top_frame">
+  <frame src="./top frame/top_frame.html" name="top_frame">
   <frameset cols="20%,*">
-    <frame src="left_frame.html" name="left_frame">
-    <frame src="right_frame.html" name="right_frame">
+    <frame src="./left frame/left_frame.html" name="left_frame">
+    <frame src="./right frame/right_frame.html" name="right_frame">
   </frameset>
 </frameset>
 </html>
