--- a/left frame/frontend/web_dev.html
+++ b/left frame/frontend/web_dev.html
@@ -49,7 +49,7 @@
                         "target="_blank"><h4>Coursera</h4></a></li>
                     <li>
                         <a href="https://www.codewithfaraz.com/article/103/50-html-css-and-javascript-projects-with-source-code-for-beginners
-                        "target="_blank"><h4>Projects for Beginners - codewithfaraz</h4></a></li>
+                        "target="_blank"><h4>Projects for Beginners - CodeWithFaraz</h4></a></li>
                     
                     <li>
                         <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/
