--- a/right frame/right_frame.html
+++ b/right frame/right_frame.html
@@ -3,7 +3,7 @@
   <title>Right Frame</title>
   <style>
     body {
-      background-image: url('./images/Horizon.jpeg');
+      background-image: url('../images/Horizon.jpeg');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
