--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -4,12 +4,12 @@
   <title>Top Frame</title>
 </head>
 <body>
-  <img src="./images/270187.png" alt="Logo" align="left" width="100" height="100">
+  <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
   <h1 align="center">E LIBRARY</h1>
   <p>
-    <a href="home.html" target="_parent">Home</a>  &nbsp;&nbsp;
+    <a href="../home.html" target="_parent">Home</a>  &nbsp;&nbsp;
     <a href="login.html" target="right_frame">Login</a> &nbsp;&nbsp;
-    <a href="registration.html" target="right_frame">Registration</a> &nbsp;&nbsp;
+    <a href="./Registration.html" target="right_frame">Registration</a> &nbsp;&nbsp;
     <a href="catalogue.html" target="right_frame">Catalogue</a> &nbsp;&nbsp;
     <a href="cart.html" target="right_frame">Cart</a> &nbsp;&nbsp;
   </p>
