--- a/right frame/right_frame.html
+++ b/right frame/right_frame.html
@@ -6,7 +6,7 @@
       background-image: url('../images/Horizon.jpeg');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: cover;
+      background-size: 100% 100%; /* Set background size to cover the entire viewport */
     }
   </style>
 </head>
