--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -1,17 +1,42 @@
-
 <html>
 <head>
   <title>Top Frame</title>
+  <style>
+    /* Style for navigation bar */
+    .navbar {
+      background-color: #000; /* Black color for the navbar */
+      overflow: hidden;
+    }
+    
+    /* Style for links in the navbar */
+    .navbar a {
+      float: left;
+      display: block;
+      color: #4CAF50; /* Green color for links */
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    /* Change color on hover for links */
+    .navbar a:hover {
+      background-color: #111; /* Darker black color on hover */
+    }
+  </style>
 </head>
 <body>
-  <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
+  <!-- Navigation bar -->
+  <div class="navbar">
+    <a href="home.html" target="_parent">Home</a>
+    <a href="login.html" target="right_frame">Login</a>
+    <a href="registration.html" target="right_frame">Registration</a>
+    <a href="catalogue.html" target="right_frame">Catalogue</a>
+    <a href="cart.html" target="right_frame">Cart</a>
+  </div>
+  
+  <!-- Logo and title -->
+  <img src="./images/270187.png" alt="Logo" align="left" width="100" height="100">
   <h1 align="center">E LIBRARY</h1>
-  <p>
-    <a href="../home.html" target="_parent">Home</a>  &nbsp;&nbsp;
-    <a href="login.html" target="right_frame">Login</a> &nbsp;&nbsp;
-    <a href="./Registration.html" target="right_frame">Registration</a> &nbsp;&nbsp;
-    <a href="catalogue.html" target="right_frame">Catalogue</a> &nbsp;&nbsp;
-    <a href="cart.html" target="right_frame">Cart</a> &nbsp;&nbsp;
-  </p>
 </body>
 </html>
