--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
   <title>Top Frame</title>
@@ -7,11 +6,11 @@
   <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
   <h1 align="center">E LIBRARY</h1>
   <p>
-    <a href="../home.html" target="_parent">Home</a>  &nbsp;&nbsp;
-    <a href="login.html" target="right_frame">Login</a> &nbsp;&nbsp;
-    <a href="./Registration.html" target="right_frame">Registration</a> &nbsp;&nbsp;
-    <a href="catalogue.html" target="right_frame">Catalogue</a> &nbsp;&nbsp;
-    <a href="cart.html" target="right_frame">Cart</a> &nbsp;&nbsp;
+    <a href="../home.html" target="_parent" style="color: green;">Home</a>  &nbsp;&nbsp;
+    <a href="login.html" target="right_frame" style="color: green;">Login</a> &nbsp;&nbsp;
+    <a href="./Registration.html" target="right_frame" style="color: green;">Registration</a> &nbsp;&nbsp;
+    <a href="catalogue.html" target="right_frame" style="color: green;">Catalogue</a> &nbsp;&nbsp;
+    <a href="cart.html" target="right_frame" style="color: green;">Cart</a> &nbsp;&nbsp;
   </p>
 </body>
 </html>
