--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -4,7 +4,7 @@
   <style>
     /* Style for navigation bar */
     .navbar {
-      background-color: #000; /* Black color for the navbar */
+      background-color: #4CAF50; /* Green color for the navbar */
       overflow: hidden;
     }
     
@@ -12,7 +12,7 @@
     .navbar a {
       float: left;
       display: block;
-      color: #4CAF50; /* Green color for links */
+      color: white; /* White color for links */
       text-align: center;
       padding: 14px 20px;
       text-decoration: none;
@@ -21,7 +21,7 @@
     
     /* Change color on hover for links */
     .navbar a:hover {
-      background-color: #111; /* Darker black color on hover */
+      background-color: #45a049; /* Darker green color on hover */
     }
   </style>
 </head>
@@ -36,7 +36,7 @@
   </div>
   
   <!-- Logo and title -->
-  <img src="./images/270187.png" alt="Logo" align="left" width="100" height="100">
+  <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
   <h1 align="center">E LIBRARY</h1>
 </body>
 </html>
