begginer bug fix

--- a/left frame/started/beginner.html
+++ b/left frame/started/beginner.html
@@ -17,7 +17,7 @@
                          " target="_blank"><h4>What is Progamming</h4></a></li>
                     <li>
                         <a href="https://www.coursera.org/in/articles/what-is-programming
-                        " target="_blank"><h4>How to Program</h4> <a/></li>         
+                        " target="_blank"><h4>How to Program</h4> </a></li>         
                 </ul>
 
                 <h3><li>Pseudocode</li></h3>
