--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
-  <h1 align="center">MISBAH's &nbsp; LIBRARY </h1>
+  <h1 style="color:Tomato;" align="center"> MISBAH's &nbsp; LIBRARY </h1>
   <p>
     <a href="../home.html" target="_parent" style="color: green;">Home</a>  &nbsp;&nbsp;
     <a href="login.html" target="right_frame" style="color: green;">Login</a> &nbsp;&nbsp;
