frontend/web dev bug fix

--- a/left frame/frontend/web_dev.html
+++ b/left frame/frontend/web_dev.html
@@ -65,7 +65,7 @@
                          <a href="https://www.educative.io/courses/learn-html-css-javascript-from-scratch
                         "target="_blank"><h4>Learn From Scratch - Educative</h4></a></li>
                     <li>
-                        <a href="https://www.codewithfaraz.com/article/103/50-html-css-and-javascript-projects-with-source-code-for-beginners
+                        <a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/
                         "target="_blank"><h4>Explained for Beginners - FreeCodeCamp</h4></a></li>
                     
                     <li>
