--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>E LIBRARY</title>
+  <title>MISBAH's LIBRARY</title>
 </head>
 <frameset rows="20%,*">
   <frame src="./top frame/top_frame.html" name="top_frame">
