--- a/top frame/top_frame.html
+++ b/top frame/top_frame.html
@@ -3,10 +3,11 @@
   <title>Top Frame</title>
 </head>
 <body>
-  <img src="../images/270187.png" alt="Logo" align="left" width="100" height="100">
-  <img src="../images/270187(2).png" alt="Logo" align="right" width="100" height="100">
+  <img src="../images/270187.png" alt="Logo" align="left" width="130" height="120"> 
+  <img src="../images/270187(2).png" alt="Logo" align="right" width="130" height="120">
   <h1 style="color:Tomato;" align="center"> MISBAH's &nbsp; LIBRARY </h1>
   <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;
     <a href="../home.html" target="_parent" style="color: green;">Home</a>  &nbsp;&nbsp;
     <a href="login.html" target="right_frame" style="color: green;">Login</a> &nbsp;&nbsp;
     <a href="./Registration.html" target="right_frame" style="color: green;">Registration</a> &nbsp;&nbsp;
