--- a/top frame/Registration.html
+++ b/top frame/Registration.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <center>
-<img src="https://images-platform.99static.com/EEBpIRPxLDVbYJ54Ikt-UgEGczI=/500x500/top/smart/99designs-contests-attachments/18/18206/attachment_18206984" align="center" width="300" height="200"> <br>                   >
+<img src="../images/Horizon.jpeg" align="center" width="500" height="200"> <br>                   >
 <form action="result.html" method="GET">
 
 <label for="name">Name</label>
