--- a/src/top frame/Registration.html
+++ b/src/top frame/Registration.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <center>
-<img src="../images/Horizon.jpeg" align="center" width="500" height="200"> <br>                   >
+<img src="../../documentation/images/Horizon.jpeg" align="center" width="500" height="200"> <br>                   >
 <form action="result.html" method="GET">
 
 <label for="name">Name</label>
