--- a/src/top frame/top_frame.html
+++ b/src/top frame/top_frame.html
@@ -3,8 +3,8 @@
   <title>Top Frame</title>
 </head>
 <body>
-  <img src="../images/270187.png" alt="Logo" align="left" width="130" height="120"> 
-  <img src="../images/270187(2).png" alt="Logo" align="right" width="130" height="120">
+  <img src="../../documentation/images/270187.png" alt="Logo" align="left" width="130" height="120"> 
+  <img src="../../documentation/images/270187(2).png" alt="Logo" align="right" width="130" height="120">
   <h1 style="color:Tomato;" align="center"> MISBAH's &nbsp; LIBRARY </h1>
   <p>
     &nbsp;&nbsp;&nbsp;&nbsp;
