folder structure image path

--- a/src/right frame/right_frame.html
+++ b/src/right frame/right_frame.html
@@ -3,7 +3,7 @@
   <title>Right Frame</title>
   <style>
     body {
-      background-image: url('../images/Horizon.jpeg');
+      background-image: url('../../documentation/images/Horizon.jpeg');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%; /* Set background size to cover the entire viewport */
