adding css left frame color light

--- a/src/left frame/left_frame.html
+++ b/src/left frame/left_frame.html
@@ -3,7 +3,7 @@
 <head>
   <title>COURSES</title>
 </head>
-<body style="background-color: #CCCCCC;">
+<body style="background-color: #dfdede;">
   <br>
   <a href="./started/started.html" target="right_frame"><h3> <font face="monotype corsiva" color="brown">Getting Started with Programming</font></h3></a><br><br><br><br><br><br>
   <a href="./frontend/frontend.html" target="right_frame"><h3><font face="monotype corsiva" color="teal">Frontend Development</font></h3></a><br><br><br><br><br><br>
