--- a/src/right frame/right_frame.html
+++ b/src/right frame/right_frame.html
@@ -6,7 +6,7 @@
       background-image: url('../../documentation/images/Horizon.jpeg');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: 100% 100%; /* Set background size to cover the entire viewport */
+      background-size: 100% 100%; 
     }
   </style>
 </head>
