--- a/src/top frame/top_frame.html
+++ b/src/top frame/top_frame.html
@@ -33,7 +33,7 @@
   <!-- Navigation bar -->
   <nav>
     <a href="../home.html" target="_parent">Home</a>
-    <a href="login.html" target="right_frame">Login</a>
+    <a href="./login.html" target="right_frame">Login</a>
     <a href="./Registration.html" target="right_frame">Registration</a>
     <a href="catalogue.html" target="right_frame">Catalogue</a>
     <a href="cart.html" target="right_frame">Cart</a>
