--- a/src/home.html
+++ b/src/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="../documentation/images/favicon.ico" type="image/x-icon">
+
   <title>MISBAH's LIBRARY</title>
+ 
 </head>
 <frameset rows="20%,*">
   <frame src="./top frame/top_frame.html" name="top_frame">
