--- a/src/html/right frame/right_frame.html
+++ b/src/html/right frame/right_frame.html
@@ -1,16 +1,19 @@
 <html>
+
 <head>
   <title>Right Frame</title>
   <style>
     body {
-      background-image: url('../../documentation/images/Horizon.jpeg');
+      background-image: url('../../../documentation/images/Horizon.jpeg');
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: 100% 100%; 
+      background-size: 100% 100%;
     }
   </style>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>`
