--- a/src/html/top frame/Registration.html
+++ b/src/html/top frame/Registration.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: #ADD8E6;"> <!-- Power blue background color -->
     <center>
-        <img src="../../documentation/images/Horizon.jpeg" align="center" width="500" height="200"> <br><br>
+        <img src="../../../documentation/images/Horizon.jpeg" align-text="center" width="500" height="200"> <br><br>
         <form action="result.html" method="GET">
             <label for="name">Name</label>
             <input type="text" size="20" id="name" required><br><br><br>
