--- a/src/html/top frame/top_frame.html
+++ b/src/html/top frame/top_frame.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Top Frame</title>
-  <style>
+<style>
     
     nav {
       background-color: teal; /* Background color */
@@ -26,9 +28,9 @@
   </style>
 </head>
 <body style="background-color: #ADD8E6;">
-  <img src="../../documentation/images/270187.png" alt="Logo" align="left" width="130" height="105"> 
-  <img src="../../documentation/images/270187(2).png" alt="Logo" align="right" width="130" height="105">
-  <h1 style="color:white;" align="center"> MISBAH's &nbsp; LIBRARY </h1>
+  <img src="../../../documentation/images/270187.png" alt="Logo" align="left" width="130" height="105"> 
+  <img src="../../../documentation/images/270187(2).png" alt="Logo" align="right" width="130" height="105">
+  <h1 style="color:white;" align="center"> MISBAH's &nbsp; CODE &nbsp; LIBRARY </h1>
   
   <!-- Navigation bar -->
   <nav>
@@ -38,5 +40,6 @@
     <a href="catalogue.html" target="right_frame">Catalogue</a>
     <a href="cart.html" target="right_frame">Cart</a>
   </nav>
+  
 </body>
 </html>
