--- a/src/html/right frame/right_frame.html
+++ b/src/html/right frame/right_frame.html
@@ -1,6 +1,8 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Right Frame</title>
   <style>
     body {
@@ -11,9 +13,7 @@
     }
   </style>
 </head>
-
 <body>
-
+  
 </body>
-
-</html>`
+</html>
